현재 상황 포트폴리오 별도 저장 엔드포인트 없어서 추가 피시방에서 뭔가 추가차단걸어 웹소켓 에러걸려서 마무리 더 바쁜 피시방 찾아야할듯/ 에이전트가 만든 에러로그들 나중에 다 삭제예정